feat: including DTOs and other changes